--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.2+'
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
     }
 }
 
@@ -17,6 +17,8 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
+        renderscriptTargetApi 19
+        renderscriptSupportModeEnabled true
         applicationId "com.hacer_app.near_friends"
         minSdkVersion 16
         targetSdkVersion 21
@@ -24,6 +26,9 @@ android {
         versionName "1.0"
     }
     buildTypes {
+        debug {
+            minifyEnabled false
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -39,8 +44,25 @@ apt {
 }
 
 dependencies {
-    apt "org.androidannotations:androidannotations:3.0+"
+    apt "org.androidannotations:androidannotations:3.2"
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "org.androidannotations:androidannotations-api:3.0+"
+    compile 'org.androidannotations:androidannotations-api:3.2'
     compile 'com.android.support:appcompat-v7:21.0.3'
+    compile 'com.github.castorflex.verticalviewpager:library:19.0.1'
+    compile 'com.rengwuxian.materialedittext:library:1.8.3'
+    compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
+    compile 'com.joanzapata.android:android-iconify:1.0.9'
+    compile 'com.github.johnpersano:supertoasts:1.3.4@aar'
+    compile 'com.afollestad:material-dialogs:0.6.6.1'
+    compile 'pl.charmas.android:android-reactive-location:0.4@aar'
+    compile 'io.reactivex:rxjava:1.0.3'
+    compile 'com.google.android.gms:play-services:7.0.0'
+    compile 'com.makeramen:roundedimageview:2.0.0'
+    compile 'com.github.carlonzo.stikkyheader:core:0.0.2-SNAPSHOT'
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.pnikosis:materialish-progress:1.5'
+    compile 'commons-io:commons-io:+'
+    compile 'com.android.support:cardview-v7:21.0.+'
+    compile 'com.pnikosis:materialish-progress:1.5'
+    compile 'org.ocpsoft.prettytime:prettytime:3.2.7.Final'
 }
